Within section selector, removed the top margin of 80px completely. Had to fix the spacing now that I removed the 'Compose Tweet' h2 element from the index.html file.

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,10 +1,9 @@
 section {
-  margin-bottom: 80px;
+  padding-top: 50px;
 }
 
 .error-msg {
   display: none;
-  margin-top: 30px;
   margin-bottom: 30px;
   border: 5px solid #FF0000;
   padding: 10px;
